# taxsnappro

./: .claude.json  .claude.json.backup.1769994596658  .claude.json.backup.1769994596665  .claude.json.backup.1769994596672  .claude.json.backup.1769994602692  .claude.json.backup.1769994602773  .gitignore  .pending-skill-updates.txt  .process-registry.json  .skill-update-demo.md  .skill-updates-archive.txt  AGENTS.md  AGENTS.md.bak  AUTONOMOUS-RULES.md  BROWSER_TROUBLESHOOTING.md  GIT-PUBLISH-WORKFLOW.md  HEARTBEAT-SCHEDULER.md  HEARTBEAT.md  IDENTITY.md  KANBAN-DEBUG.txt  KANBAN-FIX-SUMMARY.md  KANBAN-SETUP-FINAL.md  MEMORY.md  MIGRATION-PLAN.md  PROJECT-WORKFLOW.md  PROJECTS.md  SECURITY-AND-OPTIMIZATION.md  SECURITY-STANDARD-SUMMARY.md  SECURITY.md  SESSION-STATE.md  SKILL-UPDATE-WORKFLOW.md  SOUL.md  TODO-JASON.md  TODO.md  TOOLS.md  USER.md  agent-guardrails.skill  check_arbitrage_status.sh  check_restart_flag.sh  check_running.sh  (+29 more)
ai-tax/: .gitignore  PYPI_PUBLISH.md  README.md  STATUS.md  pyproject.toml
ai-tax/.build-venv/: pyvenv.cfg
ai-tax/docs/: LEGAL-REVIEW.md  PRIVACY-POLICY.md  TERMS-OF-SERVICE.md  USER-CONSENT-FORM.md  WISP.md
ai-tax/research/: improvements-research-2026-02-05.md  technical-architecture-research.md
ai-tax/src/api/: __init__.py
ai-tax/src/core/: __init__.py  data_retention.py  encryption.py  fact_graph.py  models.py  return_processor.py  security.py  tax_constants.py  tax_engine.py
ai-tax/tests/: test_fact_graph.py  test_investments.py  test_tax_engine.py
ai-tax/ui/: .gitignore  README.md  preview.html  rxconfig.py
(+494 files in other folders)
